# tablet

./: MANIFEST.in  README.md  pyproject.toml
src/tablet/: __main__.py  colors.yaml  main.py  stuff.py  styledb.py
src/tabletlib/: __main__.py  etchasketch.py  layer.py  log.conf  make_a_tablet.py  styledb.py  tablet.py
