[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tablet"
version = "0.1.0"
description = "Tablet simple 2D drawing interface to Cairo"
readme = "README.md"
authors = [{ name = "Leon Starr", email = "leon_starr@modelint.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["2D", "draw", "graphics", "canvas", "mbse", "xuml", "xtuml", "sysml"]
dependencies = ['tomli; python_version < "3.12"']
requires-python = ">=3.10"

[project.optional-dependencies]
build = ["build", "twine"]
dev = ["bump2version", "pytest"]

[project.scripts]
scrall = "tablet.__main__:main"

[project.urls]
repository    = "https://github.com/modelint/tablet"
documentation = "https://github.com/modelint/tablet/wiki"
